Mise à jour Page Index

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="description" content="Discover my Island">
-        <meta name="Author" content="Astrid JONATHAN & Léna Broisseron">
+        <meta name="Author" content="Astrid JONATHAN & Léna Boisseron">
         <meta name="copuright" content="DGitalQueen">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
