--- a/templates/components/_nav.html.twig
+++ b/templates/components/_nav.html.twig
@@ -16,37 +16,39 @@
                                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                                     <a class="dropdown-item" href="index.php">Accueil</a>
                                     <a class="dropdown-item" href="explore.html">Explore</a>
-                                    <a class="dropdown-item" href="listing.html">Listing</a>
+                                    <a class="dropdown-item" href="listing.html">Rallye</a>
                                     <a class="dropdown-item" href="single-listing.html">Single Listing</a>
                                     <a class="dropdown-item" href="contact.html">Contact</a>
                                 </div>
                             </li>
                             <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown2" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Listings <i class="fa fa-angle-down" aria-hidden="true"></i></a>
+                                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown2" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Rallye <i class="fa fa-angle-down" aria-hidden="true"></i></a>
                                 <div class="dropdown-menu" aria-labelledby="navbarDropdown2">
-                                    <a class="dropdown-item" href="index.html">Accueil</a>
-                                    <a class="dropdown-item" href="explore.html">Explore</a>
-                                    <a class="dropdown-item" href="listing.html">Listing</a>
-                                    <a class="dropdown-item" href="single-listing.html">Single Listing</a>
-                                    <a class="dropdown-item" href="contact.html">Contact</a>
+                                    <a class="dropdown-item" href="listing.html">How it Works</a>
+                                    <a class="dropdown-item" href="index.html">A Venir</a>
+                                    <a class="dropdown-item" href="explore.html">S'inscrire</a>
+                                    <a class="dropdown-item" href="listing.html">How it Works</a>
                                 </div>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="concept.html">Concept</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="contact.html">Contact</a>
                             </li>
                         </ul>
-                        <!-- Search btn -->
-                        <div class="dorne-search-btn">
-                            <a id="search-btn" href="#"><i class="fa fa-search" aria-hidden="true"></i> Search</a>
-                        </div>
                         <!-- Signin btn -->
                         <div class="dorne-signin-btn">
-                            <a href="#">Sign in  or Register</a>
+                            <a href="#" class="btn dorne-btn">Connexion</a>
                         </div>
-                        <!-- Add listings btn -->
+                        <!-- Register btn -->
+                        <div class="dorne-signin-btn">
+                            <a href="#" class="btn dorne-btn">Enregistrement</a>
+                        </div>
+                        <!-- Add listings btn
                         <div class="dorne-add-listings-btn">
                             <a href="#" class="btn dorne-btn">+ Add Listings</a>
-                        </div>
+                        </div>-->
                     </div>
                 </nav>
 
