--- a/templates/components/_nav.html.twig
+++ b/templates/components/_nav.html.twig
@@ -39,7 +39,7 @@
                         </ul>
                         <!-- Signin btn -->
                         <div class="dorne-signin-btn">
-                            <a href="#" class="btn dorne-btn">Connexion</a>
+                            <a href="{{ path('app_login') }}" class="btn dorne-btn">Connexion</a>
                         </div>
                         <!-- Register btn -->
                         <div class="dorne-signin-btn">
