--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="description" content="Discover my Island">
         <meta name="Author" content="Astrid JONATHAN & Léna Boisseron">
-        <meta name="copuright" content="DGitalQueen">
+        <meta name="copyright" content="DGitalQueen">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <title>{% block title %}Discovery My Island | Visite Mon Ile {% endblock %}</title>
