--- a/templates/components/_nav.html.twig
+++ b/templates/components/_nav.html.twig
@@ -3,7 +3,7 @@
         <div class="row h-100">
             <div class="col-12 h-100">
                 <nav class="h-100 navbar navbar-expand-lg">
-                    <a class="navbar-brand" href="index.php"><img src="assets/img/core-img/logo.png" alt=""></a>
+                    <a class="navbar-brand" href="index.php"><img src="{{ asset('img/core-img/logo.png') }} " alt=""></a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#dorneNav" aria-controls="dorneNav" aria-expanded="false" aria-label="Toggle navigation"><span class="fa fa-bars"></span></button>
                     <!-- Nav -->
                     <div class="collapse navbar-collapse" id="dorneNav">
