--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -12,9 +12,9 @@
             <!-- Bootstrap Stylesheet -->
             <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
             <!-- Core Stylesheet -->
-            <link href="assets/css/style.css" rel="stylesheet">
+            <link href="{{ asset('css/style.css') }}" rel="stylesheet">
             <!-- Responsive CSS -->
-            <link href="assets/css/responsive/responsive.css" rel="stylesheet">
+            <link href="{{ asset('css/responsive/responsive.css') }}" rel="stylesheet">
         {% endblock %}
     </head>
     <body>
@@ -23,15 +23,15 @@
         {{ include('components/footer.html.twig') }}
         {% block javascripts %}
             <!-- jQuery-2.2.4 js -->
-            <script src="assets/js/jquery/jquery-2.2.4.min.js"></script>
+            <script src="{{ asset('js/jquery/jquery-2.2.4.min.js') }}"></script>
             <!-- Popper js -->
-            <script src="assets/js/bootstrap/popper.min.js"></script>
+            <script src="{{ asset('js/bootstrap/popper.min.js') }}"></script>
             <!-- Bootstrap-4 js -->
-            <script src="assets/js/bootstrap/bootstrap.min.js"></script>
+            <script src="{{ asset('js/bootstrap/bootstrap.min.js') }}"></script>
             <!-- All Plugins js -->
-            <script src="assets/js/others/plugins.js"></script>
+            <script src="{{ asset('js/others/plugins.js') }}"></script>
             <!-- Active JS -->
-            <script src="assets/js/active.js"></script>
+            <script src="{{ asset('assets/js/active.js') }}"></script>
         {% endblock %}
     </body>
 </html>
