--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -10,7 +10,7 @@
 <!-- ***** Header Area End ***** -->
 
 <!-- ***** Welcome Area Start ***** -->
-<section class="dorne-welcome-area bg-img bg-overlay" style="background-image: url( img/bg-img/hero-1.jpg);">
+<section class="dorne-welcome-area bg-img bg-overlay" style="background-image: url( {{ asset('img/bg-img/hero-1.jpg') }});">
     <div class="container h-100">
         <div class="row h-100 align-items-center justify-content-center">
             <div class="col-12 col-md-10">
@@ -55,8 +55,8 @@
     <!-- Hero Social Btn -->
     <div class="hero-social-btn">
         <div class="social-title d-flex align-items-center">
-            <h6>Suivez nous</h6>
-            <span></span>
+            <h6>Suivez-nous</h6>
+            <span>Every where, every time</span>
         </div>
         <div class="social-btns">
             <a href="#"><i class="fa fa-linkedin" aria-haspopup="true"></i></a>
@@ -70,17 +70,18 @@
 <!-- ***** Welcome Area End ***** -->
 
 <!-- ***** Category Area Start ***** -->
-<section class="dorne-catagory-area">
+<section class="dorne-category-area">
     <div class="container">
         <div class="row">
             <div class="col-12">
-                <div class="all-catagories">
+                <div class="all-categories">
                     <div class="row">
                         {% for category in categories %}
-                        <!-- Single Catagory Area -->
+                        <!-- Single Category Area -->
                         <div class="col-12 col-sm-6 col-md">
-                            <div class="single-catagory-area wow fadeInUpBig" data-wow-delay="0.2s">
-                                <div class="catagory-content">
+                            <div class="single-category-area wow fadeInUpBig" data-wow-delay="0.2s">
+                                <div class="category-content">
+                                    <img src="{{ asset('img/core-img/' ~ category.icon) }}" alt="{{  category.name }}">
                                     <a href="#">
                                         <h6>{{category.name}}</h6>
                                     </a>
@@ -105,7 +106,7 @@
         <div class="row">
             <div class="col-12">
                 <div class="about-content text-center">
-                    <h2>Découtre la Guadeloupe avec <br><span>DiscoverMyIsland</span></h2>
+                    <h2>Découvre la Guadeloupe avec <br><span>DiscoverMyIsland</span></h2>
                     <p>s tempus elit. Sed efficitur tortor neque, vitae aliquet urna varius sit amet. Ut rhoncus, nunc nec tincidunt volutpat, ex libero.</p>
                 </div>
             </div>
@@ -122,7 +123,7 @@
             <div class="col-12">
                 <div class="section-heading text-center">
                     <span></span>
-                    <h4></h4>
+                    <h4>Les Sites Populaires</h4>
                 </div>
             </div>
         </div>
@@ -134,7 +135,7 @@
                 <div class="features-slides owl-carousel">
                     <!-- Single Site Area -->
                     <div class="single-features-area">
-                        <img src="{{ asset('img/sites-img/' ~ site.image) }}" alt="">
+                        <img src="{{ asset('img/sites-img/' ~ site.image) }}" alt="{{ site.name }}">
                         <!-- Rating & Map Area -->
                         <div class="ratings-map-area d-flex">
                             <a href="#">8.5</a>
@@ -150,8 +151,9 @@
                             </div>
                         </div>
                     </div>
-                    {% endfor %}
                 </div>
+                {% endfor %}
+            </div>
             </div>
     </div>
 </section>
