--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -31,7 +31,7 @@
             <!-- All Plugins js -->
             <script src="{{ asset('js/others/plugins.js') }}"></script>
             <!-- Active JS -->
-            <script src="{{ asset('assets/js/active.js') }}"></script>
+            <script src="{{ asset('js/active.js') }}"></script>
         {% endblock %}
     </body>
 </html>
