--- a/templates/default/category.html.twig
+++ b/templates/default/category.html.twig
@@ -24,7 +24,7 @@
                                 <div class="features-slides owl-carousel">
                                     <!-- Single Site Area -->
                                     <div class="single-features-area">
-                                        <img src="{{ 'assets/img/sites-img/' ~ site.image }}" alt="">
+                                        <img src="{{ asset('/img/sites-img/') ~ site.image }}" alt="">
 
                                         <div class="feature-content d-flex align-items-center justify-content-between">
                                             <div class="feature-title">
