--- a/templates/default/site.html.twig
+++ b/templates/default/site.html.twig
@@ -6,12 +6,11 @@
 
 {% block content %}
 
-        <section class="dorne-features-restaurant-area bg-default">
+        <section class=" bg-default">
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-12">
-                        <div class="section-heading text-center">
-                            <span></span>
+                        <div class="section-heading text-center mt-5">
                             <h4>{{ site.name}}</h4>
                         </div>
                     </div>
@@ -19,27 +18,19 @@
 
                 <div class="row">
                     <div class="col-12">
+                        <div class="text-center ">
 
-                                <div class="features-slides owl-carousel">
-                                    <!-- Single Site Area -->
-                                    <div class="single-features-area">
-                                        <img src="assets/img/bg-img/feature-6.jpg" alt="">
-
-                                        <div class="feature-content d-flex align-items-center justify-content-between">
-                                            <div class="feature-title">
-                                                <h5>{{ site.name }}</h5>
-                                            </div>
-                                            <div>
-                                                {{ site.content }}
-                                            </div>
-                                            <div class="feature-favourite">
-                                                <a href="#"><i class="fa fa-heart-o" aria-hidden="true"></i></a>
-                                            </div>
-                                        </div>
-                                    </div>
-
-
+                        <img class="img-fluid" src="{{ asset('img/sites-img/' ~ site.image) }}" alt="{{ site.name }}">
                         </div>
+                        <div class="">
+                            {{ site.content }}
+                        </div>
+
+
+
+
+
+
                     </div>
                 </div>
             </div>
