--- a/templates/components/_nav.html.twig
+++ b/templates/components/_nav.html.twig
@@ -15,13 +15,13 @@
                                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Explore <i class="fa fa-angle-down" aria-hidden="true"></i></a>
                                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                                     {% for category in categories %}
-                                        <a class="dropdown-item" href="#">{{category.name}}</a>
+                                        <a class="dropdown-item" href="{{ path('default_category', {alias : category.alias}) }}">{{category.name}}</a>
                                     {% endfor%}
 
                                 </div>
                             </li>
                             <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown2" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Rallye <i class="fa fa-angle-down" aria-hidden="true"></i></a>
+                                <a class="nav-link dropdown-toggle" href="" id="navbarDropdown2" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Rallye <i class="fa fa-angle-down" aria-hidden="true"></i></a>
                                 <div class="dropdown-menu" aria-labelledby="navbarDropdown2">
                                     <a class="dropdown-item" href="listing.html">How it Works</a>
                                     <a class="dropdown-item" href="index.html">A Venir</a>
@@ -30,10 +30,10 @@
                                 </div>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="concept.html">Concept</a>
+                                <a class="nav-link" href="">Concept</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="contact.html">Contact</a>
+                                <a class="nav-link" href="">Contact</a>
                             </li>
                         </ul>
                         <!-- Signin btn -->
