--- a/templates/components/footer.html.twig
+++ b/templates/components/footer.html.twig
@@ -3,12 +3,11 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-12 d-md-flex align-items-center justify-content-between">
-                <div class="footer-text">
-                    <p>
-                        <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                        Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="http://www.dgitalqueen.com" target="_blank">DgitalQueen</a>
-                        <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                    </p>
+                <div id="contactB">
+
+                </div>
+                <div id="newsletter">
+
                 </div>
                 <div class="footer-social-btns">
                     <a href="#"><i class="fa fa-linkedin" aria-haspopup="true"></i></a>
@@ -17,6 +16,14 @@
                     <a href="#"><i class="fa fa-twitter" aria-haspopup="true"></i></a>
                     <a href="#"><i class="fa fa-facebook" aria-haspopup="true"></i></a>
                 </div>
+
+            </div>
+        </div>
+        <div class="row bg-default justify-content-centermt-2 ">
+            <div class="footer-text text-center">
+                <p class="text-center">
+                    Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="http://www.dgitalqueen.com" target="_blank">DgitalQueen</a>
+                </p>
             </div>
         </div>
     </div>
