--- a/templates/user/register.html.twig
+++ b/templates/user/register.html.twig
@@ -5,6 +5,11 @@
 {% endblock %}
 
 {% block content %}
+
+    <!-- ***** Breadcumb Area Start ***** -->
+    <div class="breadcumb-area bg-img bg-overlay" style="background-image: url({{ asset('img/bg-img/hero-1.jpg') }})">
+    </div>
+    <!-- ***** Breadcumb Area End ***** -->
     <div class="p-3 mx-auto text-center">
         <h1 class="display-4">Inscription</h1>
     </div>
