--- a/public/css/style.css
+++ b/public/css/style.css
@@ -344,12 +344,12 @@ li {
 }
 
 .dorne-btn {
-    min-width: 180px;
-    height: 52px;
+    min-width: 100px;
+    height: 45px;
     background-color: #FF9900;
     border-radius: 0;
     padding: 0 15px;
-    line-height: 50px;
+    line-height: 40px;
     color: #fff;
     font-weight: 600;
     font-size: 15px;
@@ -942,14 +942,17 @@ li {
 /* Footer Area CSS */
 
 .dorne-footer-area {
-    padding: 50px 35px;
-    border-top: 1px solid #bec0cc;
+    padding:  30px 0;
+    border-top: 1px solid #cc6908;
+
 }
 
 .footer-text p {
     font-size: 14px;
     font-weight: 700;
     margin-bottom: 0;
+    color:white;
+    text-align: center;
 }
 
 .footer-social-btns > a {
@@ -957,6 +960,11 @@ li {
     color: #464646;
     padding: 0 15px;
     font-size: 14px;
+}
+.footer-social-btns > a:hover{
+
+    color: #cc6908;
+
 }
 
 /* Breadcumb Area CSS */
