--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -8,6 +8,8 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <title>{% block title %}Discovery My Island | Visite Mon Ile {% endblock %}</title>
+        <!-- Favicon -->
+        <link rel="icon" href="{{ asset('img/core-img/favicon.ico') }}">
         {% block stylesheets %}
             <!-- Bootstrap Stylesheet -->
             <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
