--- a/templates/default/category.html.twig
+++ b/templates/default/category.html.twig
@@ -1,53 +1,69 @@
 {% extends "base.html.twig" %}
 
 {% block title %}
-    {{ category.name}}
+
 {% endblock %}
 
 {% block content %}
+    
 
-        <section class="bg-default">
-            <div class="container-fluid">
-                <div class="row">
-                    <div class="col-12">
-                        <div class="section-heading text-center">
-                            <span></span>
-                            <h4>{{ category.name}}</h4>
-                        </div>
-                    </div>
-                </div>
 
-                <div class="row">
-                    <div class="col-12">
-                        {% if sites is not empty %}
-                            {% for site in sites %}
-                                <div class="features-slides owl-carousel">
-                                    <!-- Single Site Area -->
-                                    <div class="single-features-area">
-                                        <img src="{{ asset('/img/sites-img/') ~ site.image }}" alt="">
-
-                                        <div class="feature-content d-flex align-items-center justify-content-between">
-                                            <div class="feature-title">
-                                                <h5>{{ site.name }}</h5>
-                                            </div>
-                                            <div>
-                                                {{ site.content }}
-                                            </div>
-                                            <div class="feature-favourite">
-                                                <a href="#"><i class="fa fa-heart-o" aria-hidden="true"></i></a>
-                                            </div>
-                                        </div>
-                                    </div>
-
-                                {% endfor %}
-                            {% endif %}
-
-                        </div>
+<!-- ***** Breadcumb Area Start ***** -->
+<div class="breadcumb-area bg-img bg-overlay" style="background-image: url({{ asset('img/bg-img/hero-1.jpg') }})"></div>
+<!-- ***** Breadcumb Area End ***** -->
+    <!-- ***** Listing Destinations Area Start ***** -->
+    <section class="dorne-listing-destinations-area section-padding-100-50">
+        <div class="container">
+            <div class="row">
+                <div class="col-12">
+                    <div class="section-heading dark text-center">
+                        <span></span>
+                        <h4>Sites de la  catégorie: {{ category.name}}</h4>
                     </div>
                 </div>
             </div>
-        </section>
-        <!-- ***** Category Area End ***** -->
+            <div class="row">
+                <!-- Single Features Area -->
+                {% if sites is not empty %}
+                    {% for site in sites %}
+                    <div class="col-12 col-sm-6 col-lg-4">
 
+
+                            <div class="single-features-area mb-50">
+                                <img class="img-fluid" src="{{ asset('img/sites-img/' ~ site.image) }}" alt="{{ site.name }}">
+                                <!-- Category -->
+                                <div class="price-start">
+                                    <p>Culture</p>
+                                </div>
+                                <div class="feature-content d-flex align-items-center justify-content-between">
+                                    <div class="feature-title">
+                                        <h5>{{ site.name }}</h5>
+
+                                        <p>{{ site.content|striptags | u.truncate(100, '...')}}</p>
+                                    </div>
+                                    <div class="feature-favourite">
+                                        <a href="#"><i class="fa fa-heart-o" aria-hidden="true"></i></a>
+                                    </div>
+                                </div>
+                                <div class="">
+                                    <a href="{{ path('default_site', {
+                                        alias : site.alias,
+                                        id : site.id,
+                                        category : site.category.alias}
+                                    )}}" class="btn btn-block dorne-btn">J'y go</a>
+                                </div>
+                            </div>
+
+                    </div>
+                {% endfor %}
+                {% else %}
+                    <div class="col-12 alert alert-warning text-center">
+                        Aucun site pour le moment pour cette catégorie !
+                    </div>
+                {% endif %}
+            </div>
+        </div>
+    </section>
+    <!-- ***** Listing Destinations Area End ***** -->
 
 {% endblock %}
