--- a/templates/components/_nav.html.twig
+++ b/templates/components/_nav.html.twig
@@ -12,12 +12,9 @@
                                 <a class="nav-link" href="index.php">Accueil <span class="sr-only">(current)</span></a>
                             </li>
                             <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" href="{{ path('default_explore') }}"  role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Explore</a>
+                                <a class="nav-link " href="{{ path('default_explore') }}"  role="button" aria-haspopup="true" aria-expanded="false">Explore</a>
                                 <!--<<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-
                                         a class="dropdown-item" href=""></a>
-
-
                                 </div>-->
                             </li>
                             <li class="nav-item dropdown">
