--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -30,12 +30,11 @@
                                 <h6>Que recherchez-vous?</h6>
                                 <form action="#" method="get">
                                     <select class="custom-select">
-                                        <option selected>Your Destinations</option>
-                                        <option value="1">New York</option>
-                                        <option value="2">Latvia</option>
-                                        <option value="3">Dhaka</option>
-                                        <option value="4">Melbourne</option>
-                                        <option value="5">London</option>
+                                        <option selected>Moyens de transport</option>
+                                        <option value="1">A pied</option>
+                                        <option value="2">En voiture</option>
+                                        <option value="3">Autre</option>
+
                                     </select>
                                     <select class="custom-select">
                                         <option selected>Toutes les catégories</option>
@@ -134,7 +133,7 @@
                 <div class="col-12">
                     <div class="section-heading text-center">
                         <span></span>
-                        <h4>Les Sites Populaires</h4>
+                        <h4>Nos sites ou parcours préférés </h4>
                     </div>
                 </div>
             </div>
@@ -178,11 +177,11 @@
             <div class="row">
                 <div class="col-12">
                     <div class="clients-logo d-md-flex align-items-center justify-content-around">
-                        <img src="{{ asset('img/clients-img/1.png') }}" alt="">
-                        <img src="{{ asset('img/clients-img/2.png') }}" alt="">
-                        <img src="{{ asset('img/clients-img/3.png"') }}" alt="">
-                        <img src="{{ asset('img/clients-img/4.png') }}" alt="">
-                        <img src="{{ asset('img/clients-img/5.png') }}" alt="">
+                        <img style=" width:100px; height:100px;" src="{{ asset('img/clients-img/1.png') }}" alt="">
+                        <img style=" width:80px; height:80px;" src="{{ asset('img/clients-img/2.png') }}" alt="">
+                        <img style=" width:80px; height:80px;" src="{{ asset('img/clients-img/3.png') }}" alt="">
+                        <img style=" width:100px; height:100px;" src="{{ asset('img/clients-img/4.png') }}" alt="">
+                        <img style=" width:130px; height:130px;" src="{{ asset('img/clients-img/5.png') }}" alt="">
                     </div>
                 </div>
             </div>
