--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -3,6 +3,11 @@
 {% block title %}Connexion{% endblock %}
 
 {% block content %}
+
+    <!-- ***** Breadcumb Area Start ***** -->
+    <div class="breadcumb-area bg-img bg-overlay" style="background-image: url({{ asset('img/bg-img/hero-1.jpg') }})">
+    </div>
+    <!-- ***** Breadcumb Area End ***** -->
     <div class="container">
         <div class="row">
             <div class="col-4 mx-auto">
@@ -13,27 +18,24 @@
 
                     <h1 class="text-center mt-4">Connexion</h1>
 
-                    <label for="inputPseudo">Pseudo</label>
+                    <label class="my-2" for="inputPseudo">Pseudo</label>
                     <input type="pseudo" value="{{ last_username }}" name="pseudo" id="inputPseudo" class="form-control" required autofocus>
-                    <label for="inputPassword">Mot de passe</label>
+                    <label class="my-2" for="inputPassword">Mot de passe</label>
                     <input type="password" name="password" id="inputPassword" class="form-control" required>
 
                     <input type="hidden" name="_csrf_token"
                            value="{{ csrf_token('authenticate') }}"
                     >
 
-                    {#
-                        Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
-                        See https://symfony.com/doc/current/security/remember_me.html
 
-                        <div class="checkbox mb-3">
+                        <div class="checkbox mb-3 mt-2">
                             <label>
-                                <input type="checkbox" name="_remember_me"> Remember me
+                                <input type="checkbox" name="_remember_me"> Se souvenir de moi
                             </label>
                         </div>
-                    #}
 
-                    <button class="btn btn-lg btn-primary" type="submit">
+
+                    <button class="btn btn-block dorne-btn my-4" type="submit">
                         Connexion
                     </button>
                 </form>
