--- a/templates/components/footer.html.twig
+++ b/templates/components/footer.html.twig
@@ -32,7 +32,7 @@
         </div>
         <div class="row bg-default justify-content-center mt-2 ">
             <div class="footer-text text-center">
-                <p class="text-center">
+                <p class="text-center p-2">
                     Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="http://www.dgitalqueen.com" target="_blank">DgitalQueen</a>
                 </p>
             </div>
