--- a/templates/default/explore.html.twig
+++ b/templates/default/explore.html.twig
@@ -123,15 +123,23 @@
                     </div>
                     {% endfor %}
             </div>
-
+            </div>
             <!-- END Explore Search Result -->
-        </div>
+
         <!-- Explore Map Area -->
         <div class="explore-map-area">
             <div id="exploreGoogleMap"></div>
+        </div>
         </div>
     </section>
 
 
 
+{% endblock %}
+
+{% block scripts %}
+    {{ parent() }}
+    <!-- Google Maps js -->
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDk9KNSL1jTv4MY9Pza6w8DJkpI_nHyCnk"></script>
+    <script src="{{ asset('js/google-map/location-map-active.js') }}"></script>
 {% endblock %}
