--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -42,7 +42,7 @@
                                         <option value="{{category.id}}">{{category.name}}</option>
                                         {% endfor %}
                                     </select>
-                                    <button type="submit" class="btn dorne-btn"><i class="fa fa-search pr-2"
+                                    <button type="submit" class="btn dorne-btn"><i class="fa fa-search"
                                                                                    aria-hidden="true"></i> Rechercher
                                     </button>
                                 </form>
@@ -181,7 +181,6 @@
                         <img style=" width:80px; height:80px;" src="{{ asset('img/clients-img/2.png') }}" alt="">
                         <img style=" width:80px; height:80px;" src="{{ asset('img/clients-img/3.png') }}" alt="">
                         <img style=" width:100px; height:100px;" src="{{ asset('img/clients-img/4.png') }}" alt="">
-                        <img style=" width:130px; height:130px;" src="{{ asset('img/clients-img/5.png') }}" alt="">
                     </div>
                 </div>
             </div>
